--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,69 +1,61 @@
-# This is a basic workflow to help you get started with Actions
+name: rootfs-ubuntu-desktop-6.7
 
-name: rootfs
-
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "master" ]
+    branches: ["master"]
   pull_request:
-    branches: [ "master" ]
-
-  # Allows you to run this workflow manually from the Actions tab
+    branches: ["master"]
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   kernel:
     runs-on: ubuntu-latest
-    strategy:
-            matrix:
-                version: [6.7-working, 6.8]
-    # Steps represent a sequence of tasks that will be executed as part of the job
+
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
-        
+
       - name: Install Dependencies
-        run: sudo apt update && sudo apt install build-essential gcc-aarch64-linux-gnu bc flex bison 7zip kmod bash cpio binutils tar git wget dpkg libssl-dev
+        run: |
+          sudo apt update
+          sudo apt install -y \
+            build-essential gcc-aarch64-linux-gnu bc flex bison \
+            7zip kmod bash cpio binutils tar git wget dpkg libssl-dev
 
-      - name: Build kernel
-        run: sudo sh nabu-kernel_build.sh ${{ matrix.version }}
+      - name: Build kernel (6.7-working)
+        run: sudo sh nabu-kernel_build.sh 6.7-working
 
-      - name: Upload deb packages
-        uses: actions/upload-artifact@v4.0.0
+      - name: Upload kernel debs
+        uses: actions/upload-artifact@v4
         with:
-          # Artifact name
-          name: xiaomi-nabu-debs_${{ matrix.version }}
-          path: ${{ github.workspace }}/*.deb
-          
+          name: xiaomi-nabu-debs_6.7-working
+          path: "*.deb"
+
   rootfs:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
     needs: kernel
-    strategy:
-            matrix:
-                desktop: [ubuntu-desktop, lomiri]
-                kernel: [6.7-working, 6.8]
-    # Steps represent a sequence of tasks that will be executed as part of the job
+
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
-      - uses: actions/download-artifact@v4
+
+      - name: Download kernel artifacts
+        uses: actions/download-artifact@v4
         with:
-          pattern: xiaomi-nabu-debs*
+          name: xiaomi-nabu-debs_6.7-working
+          path: xiaomi-nabu-debs_6.7-working
+
       - name: Install Dependencies
-        run: sudo apt update && sudo apt install unzip build-essential gcc-aarch64-linux-gnu bc flex bison 7zip kmod bash cpio binutils tar git wget dpkg libssl-dev
+        run: |
+          sudo apt update
+          sudo apt install -y \
+            unzip build-essential gcc-aarch64-linux-gnu bc flex bison \
+            7zip kmod bash cpio binutils tar git wget dpkg libssl-dev
 
-      - name: Build rootfs
-        run: sudo sh nabu-rootfs_build.sh ${{ matrix.desktop }} ${{ matrix.kernel }}
+      - name: Build rootfs (ubuntu-desktop + 6.7-working)
+        run: sudo sh nabu-rootfs_build.sh ubuntu-desktop 6.7-working
 
-      - name: Upload rootfs.7z
-        uses: actions/upload-artifact@v4.0.0
+      - name: Upload rootfs
+        uses: actions/upload-artifact@v4
         with:
-          # Artifact name
-          name: rootfs_${{ matrix.desktop }}_${{ matrix.kernel }}
+          name: rootfs_ubuntu-desktop_6.7-working
           path: rootfs.7z
           compression-level: 0
